Add back support for parent url factories